tests/fixtures/invalid/set_in_float.py
# Cannot use 'in' with Set[int] and Float
x: bool = {1, 2, 3} in 1.0
